--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             >Web<span class="studio">Studio</span>
           </a>
           <ul class="header-nav-list">
+            <svg class="burger-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-solid-menu"></use>
+            </svg>
             <li>
               <a href="./index.html" class="studionav studio-change">
                 Studio
