--- a/index.html
+++ b/index.html
@@ -57,6 +57,71 @@
           </ul>
         </address>
       </div>
+      <div class="mobile-container">
+        <div class="mobile-nav">
+          <nav>
+            <ul class="mobile-nav-list">
+              <li class="mobile-nav-item">
+                <a class="mobile-nav-a" href="">Studio</a>
+              </li>
+              <li class="mobile-nav-item">
+                <a class="mobile-nav-a" href="">Portfolio</a>
+              </li>
+              <li class="mobile-nav-item">
+                <a class="mobile-nav-a" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mobile-adress-container">
+          <address class="mobile-address">
+            <ul class="mobile-adress-list">
+              <li>
+                <a href="mailto:info@devstudio.com" class="mobile-adre"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="mobile-addre"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="mobile-social-container">
+          <ul class="mobile-social-list">
+            <li class="social-emblem">
+              <a class="emblem" href="https://www.instagram.com/">
+                <svg class="icon emblem-styles" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-emblem">
+              <a class="emblem" href="https://twitter.com/">
+                <svg class="icon emblem-styles" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-emblem">
+              <a class="emblem" href="https://www.facebook.com/">
+                <svg class="icon emblem-styles" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-emblem">
+              <a class="emblem" href="https://www.linkedin.com/">
+                <svg class="icon emblem-styles" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
