--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
               </li>
             </ul>
           </nav>
+          
+          </div>
         </div>
         <div class="mobile-adress-container">
           <address class="mobile-address">
@@ -82,7 +84,7 @@
                 >
               </li>
               <li>
-                <a href="tel:+110001111111" class="mobile-addre"
+                <a href="tel:+110001111111" class="mobile-adre"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -530,7 +532,7 @@
         </div>
       </div>
     </footer>
-    <div class="container-modal-window">
+    <!-- <div class="container-modal-window">
       <div class="modal-window">
         <button type="button" class="modal-btn">
           <svg class="icon-close" width="8" height="8">
@@ -613,6 +615,6 @@ Text input</textarea
           <button class="send-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
