--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <h2 class="third-section-title">Our Team</h2>
           <ul class="third-section-list">
             <li class="images-background">
-              <img src="./images/team1.jpg" alt="mark" width="264" />
+              <img class="team-image" srcset="./images/team-01-1x.jpg, ./images/team-01-2x.jpg 2x" src="./images/team-01-1x.jpg" alt="mark" width="264" />
               <div class="container-for-worker">
                 <h3 class="third-section-workers">Mark Guerrero</h3>
                 <p class="third-section-p">Product Designer</p>
@@ -235,7 +235,7 @@
               </div>
             </li>
             <li class="images-background">
-              <img src="./images/team2.jpg" alt="tom" width="264" />
+              <img class="team-image" srcset="./images/team-02-1x.jpg, ./images/team-02-2x.jpg 2x" src="./images/team-02-1x.jpg" alt="tom" width="264" />
               <div class="container-for-worker">
                 <h3 class="third-section-workers">Tom Ford</h3>
                 <p class="third-section-p">Frontend Developer</p>
@@ -272,7 +272,7 @@
               </div>
             </li>
             <li class="images-background">
-              <img src="./images/team3.jpg" alt="camila" width="264" />
+              <img class="team-image" srcset="./images/team-03-1x.jpg, ./images/team-03-2x.jpg 2x" src="./images/team-03-1x.jpg" alt="camila" width="264" />
               <div class="container-for-worker">
                 <h3 class="third-section-workers">Camila Garcia</h3>
                 <p class="third-section-p">Marketing</p>
@@ -309,7 +309,7 @@
               </div>
             </li>
             <li class="images-background">
-              <img src="./images/team4.jpg" alt="daniel" width="264" />
+              <img class="team-image" srcset="./images/team-04-1x.jpg, ./images/team-04-2x.jpg 2x" src="./images/team-04-1x.jpg" alt="daniel" width="264" />
               <div class="container-for-worker">
                 <h3 class="third-section-workers">Daniel Wilson</h3>
                 <p class="third-section-p">UI Designer</p>
@@ -354,8 +354,8 @@
           <ul class="fourth-section-list">
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/bank1.jpg"
+                <img class="benefits-images" srcset="./images/bank-1x.jpg, ./images/bank-2x.jpg 2x"
+                  src="./images/bank-1x.jpg"
                   alt="banking"
                   width="360"
                   height="300"
@@ -373,8 +373,8 @@
             </li>
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/cash2.jpg"
+                <img class="benefits-images" srcset="./images/cash-1x.jpg, ./images/cash-2x.jpg 2x"
+                  src="./images/cash-1x.jpg"
                   alt="payment"
                   width="360"
                   height="300"
@@ -392,8 +392,8 @@
             </li>
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/med3.jpg"
+                <img class="benefits-images" srcset="./images/med-1x.jpg, ./images/med-2x.jpg 2x"
+                  src="./images/med-1x.jpg"
                   alt="meditation"
                   width="360"
                   height="300"
@@ -411,8 +411,8 @@
             </li>
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/taxi4.jpg"
+                <img class="benefits-images" srcset="./images/taxi-1x.jpg, ./images/taxi-2x.jpg 2x"
+                  src="./images/taxi-1x.jpg"
                   alt="taxi"
                   width="360"
                   height="300"
@@ -430,8 +430,8 @@
             </li>
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/screen5.jpg"
+                <img class="benefits-images" srcset="./images/screen-1x.jpg, ./images/screen-2x.jpg 2x"
+                  src="./images/screen-1x.jpg"
                   alt="screen"
                   width="360"
                   height="300"
@@ -449,8 +449,8 @@
             </li>
             <li class="fourth-section-item">
               <div class="pictures-container">
-                <img
-                  src="./images/online6.jpg"
+                <img class="benefits-images" srcset="./images/online-1x.jpg, ./images/online-2x.jpg 2x"
+                  src="./images/online-1x.jpg"
                   alt="girl"
                   width="360"
                   height="300"
