--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
       </section>
       <section class="fourth-section">
-        <div class="container">
+        <div class="container fourth-container">
           <h2 class="third-section-title">Our Portfolio</h2>
           <ul class="fourth-section-list">
             <li class="fourth-section-item">
